--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 </head>
 <body>
-  <load src="partials/header.html" />
-
+  <load src="./partials/header.html" />
 
   <main>
     <load src="./partials/home-content.html" />
