--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Cinemania - Home</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-  <script type="module" crossorigin src="/My-Project-Cinemania/assets/main-CPkKByFd.js"></script>
-  <link rel="stylesheet" crossorigin href="/My-Project-Cinemania/assets/main-RFHBmmi6.css">
+  <script type="module" crossorigin src="/assets/main-CXJVh9_m.js"></script>
+  <link rel="stylesheet" crossorigin href="/assets/main-RFHBmmi6.css">
 </head>
 <body>
   <header class="site-header">
@@ -43,7 +43,6 @@
   </div>
 </header>
 <div class="mobile-overlay"></div>
-
 
   <main>
     <section class="hero-section" id="home-hero">
