--- a/catalog.html
+++ b/catalog.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Cinemania - Catalog</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-  <script type="module" crossorigin src="/assets/main-CXJVh9_m.js"></script>
-  <link rel="stylesheet" crossorigin href="/assets/main-RFHBmmi6.css">
+  <script type="module" crossorigin src="/my-project-cinemania/assets/main-Y2BMjPT2.js"></script>
+  <link rel="stylesheet" crossorigin href="/my-project-cinemania/assets/main-RFHBmmi6.css">
 </head>
 <body>
   <header class="site-header">
