--- a/src/catalog.html
+++ b/src/catalog.html
@@ -6,54 +6,20 @@
   <title>Cinemania - Catalog</title>
   <link rel="stylesheet" href="./css/main.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+  <link rel="icon" href="./img/favicon.png" type="image/png" />
 </head>
 <body>
   <load src="./partials/header.html" />
 
-  <main>
-    <section id="catalog-hero" class="hero-section">
-      <div class="container hero-container">
-        <div class="hero-content" id="catalog-hero-content"></div>
-      </div>
-    </section>
+ 
 
-    <section class="search-section">
-      <div class="container">
-        <form class="search-form" id="search-form">
-          <input type="text" class="search-bar" id="search-input" placeholder="Search" />
-          <div class="custom-dropdown" id="year-dropdown">
-  <div class="dropdown-header" id="dropdown-header">
-    <span id="selected-year">Year</span>
-    <i class="fas fa-chevron-down"></i>
-  </div>
-  <ul class="dropdown-list is-hidden" id="dropdown-list"></ul>
-</div>
-<input type="hidden" id="year-input" value="" />
-          <button type="submit" class="search-btn">
-            <i class="fas fa-search"></i>
-          </button>
-        </form>
-      </div>
-    </section>
-
-    <section class="movie-grid-section">
-      <div class="container">
-        <div class="movie-grid-container" id="movie-grid"></div>
-      </div>
-    </section>
-
-    <section class="pagination-section">
-      <div class="container">
-        <div class="pagination"></div>
-      </div>
-    </section>
-  </main>
-
+  <load src="./partials/catalog-content.html" />
   <load src="./partials/footer.html" />
   <load src="./partials/trailer-error-modal.html" />
   <load src="./partials/team-modal.html" />
   <load src="./partials/trailer-modal.html" />
   <load src="./partials/movie-details-modal.html" />
+  <load src="./partials/login.html" />
 
  <script type="module" src="./js/main.js"></script>
 <script type="module" src="./js/catalog.js"></script> </body>
