--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
   <title>Cinemania - Home</title>
   <link rel="stylesheet" href="./css/main.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+  <link rel="icon" href="./img/favicon.png" type="image/png" />
+
 </head>
 <body>
   <load src="./partials/header.html" />
@@ -19,6 +21,7 @@
   <load src="./partials/trailer-error-modal.html" />
   <load src="./partials/trailer-modal.html" />
   <load src="./partials/movie-details-modal.html" />
+  <load src="./partials/login.html" />
 
 
 
