--- a/src/my-library.html
+++ b/src/my-library.html
@@ -6,41 +6,19 @@
   <title>Cinemania - My Library</title>
   <link rel="stylesheet" href="./css/main.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+  <link rel="icon" href="./img/favicon.png" type="image/png" />
 </head>
 <body>
   <load src="./partials/header.html" />
 
-  <main>
-    <section class="hero-section" id="library-hero">
-      <div class="container hero-container">
-        <div class="hero-content" id="library-hero-content"></div>
-      </div>
-    </section>
-
-    <section class="library-content-section">
-      <div class="container">
-        <div class="genre-filter-container" id="genre-filter-container">
-          <div class="genre-header" id="genre-header">
-            <span id="selected-genre-text">Genre</span>
-            <i class="fas fa-chevron-down"></i>
-          </div>
-          <div class="genre-list is-hidden" id="genre-list"></div>
-        </div>
-
-        <div class="movie-grid-container" id="library-grid"></div>
-
-        <div class="load-more-container is-hidden" id="load-more-container">
-          <button class="btn btn-primary load-more-btn" id="load-more-btn">Load More</button>
-        </div>
-      </div>
-    </section>
-  </main>
-
+ 
+<load src="./partials/my-library-content.html" />
   <load src="./partials/footer.html" />
   <load src="./partials/team-modal.html" />
   <load src="./partials/trailer-error-modal.html" />
   <load src="./partials/trailer-modal.html" />
   <load src="./partials/movie-details-modal.html" />
+  <load src="./partials/login.html" />
   
 
   <script type="module" src="./js/main.js"></script>
