--- a/src/catalog.html
+++ b/src/catalog.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,20 +9,32 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   <link rel="icon" href="./img/favicon.png" type="image/png" />
 </head>
+
 <body>
-  <load src="./partials/header.html" />
 
- 
+  <header>
+    <load src="./partials/header.html" />
+  </header>
 
-  <load src="./partials/catalog-content.html" />
-  <load src="./partials/footer.html" />
-  <load src="./partials/trailer-error-modal.html" />
-  <load src="./partials/team-modal.html" />
-  <load src="./partials/trailer-modal.html" />
-  <load src="./partials/movie-details-modal.html" />
-  <load src="./partials/login.html" />
 
- <script type="module" src="./js/main.js"></script>
-<script type="module" src="./js/catalog.js"></script> </body>
+
+  <main>
+    <load src="./partials/catalog-content.html" />
+
+    <load src="./partials/trailer-error-modal.html" />
+
+    <load src="./partials/trailer-modal.html" />
+    <load src="./partials/movie-details-modal.html" />
+    <load src="./partials/login.html" />
+  </main>
+
+  <footer>
+    <load src="./partials/footer.html" />
+    <load src="./partials/team-modal.html" />
+  </footer>
+  <script type="module" src="./js/main.js"></script>
+  <script type="module" src="./js/catalog.js"></script>
 </body>
+</body>
+
 </html>
