--- a/index.html
+++ b/index.html
@@ -6,7 +6,32 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Cinemania - Movie Database</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
+  <link rel="dns-prefetch" href="//image.tmdb.org" />
+  <link rel="dns-prefetch" href="//api.themoviedb.org" />
+  <link rel="dns-prefetch" href="//filmorex.firebaseapp.com" />
+  <link rel="dns-prefetch" href="//cdnjs.cloudflare.com" />
+
+  <link rel="preconnect" href="https://image.tmdb.org" crossorigin />
+  <link rel="preconnect" href="https://api.themoviedb.org" crossorigin />
+  <link rel="preconnect" href="https://filmorex.firebaseapp.com" />
+  <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin />
+
+  <link
+    rel="preload"
+    as="style"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    onload="this.onload=null;this.rel='stylesheet'"
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"
+  />
+  <noscript>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+  </noscript>
   <link rel="icon" href="/img/favicon.png" type="image/png" />
 </head>
 <body>
